--- a/snap1/snap1/Info.plist
+++ b/snap1/snap1/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>we would like to get an acces to your camera in order to send snaps. </string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>we want to get to your photos to send as a snap.</string>
 	<key>CFBundleDevelopmentRegion</key>
